--- a/BaseSKLearn/BaseSKLearn.csproj
+++ b/BaseSKLearn/BaseSKLearn.csproj
@@ -12,10 +12,15 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.0" />
       <PackageReference Include="Microsoft.SemanticKernel" Version="1.32.0" />
+      <PackageReference Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.32.0" />
+      <PackageReference Include="Microsoft.SemanticKernel.Yaml" Version="1.32.0" />
     </ItemGroup>
 
     <ItemGroup>
       <None Update="tmpsecrets.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Test02\joke.yaml">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
