--- a/BaseSKLearn/BaseSKLearn.csproj
+++ b/BaseSKLearn/BaseSKLearn.csproj
@@ -22,15 +22,23 @@
       <None Update="tmpsecrets.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Update="Test02\joke.yaml">
+      <None Update="BaseDemos\Test02\joke.yaml">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Update="Test04\Plugins\**">
+      <None Update="BaseDemos\Test04\Plugins\**">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Update="Test05\Plugins\**">
+      <None Update="BaseDemos\Test05\Plugins\**">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Utils\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\SKUtils\SKUtils.csproj" />
     </ItemGroup>
 
 </Project>
