嵌套函数，添加数学和翻译插件的提示文件及配置

--- a/BaseSKLearn/BaseSKLearn.csproj
+++ b/BaseSKLearn/BaseSKLearn.csproj
@@ -31,11 +31,12 @@
       <None Update="BaseDemos\Test05\Plugins\**">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Plugins\**">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
-    <ItemGroup>
-      <Folder Include="Utils\" />
-    </ItemGroup>
+
 
     <ItemGroup>
       <ProjectReference Include="..\SKUtils\SKUtils.csproj" />
