--- a/SKUtils/SKUtils.csproj
+++ b/SKUtils/SKUtils.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
       <PackageReference Include="Microsoft.SemanticKernel" Version="1.32.0" />
+      <PackageReference Include="Microsoft.SemanticKernel.Planners.Handlebars" Version="1.32.0-preview" />
       <PackageReference Include="Microsoft.SemanticKernel.Plugins.Core" Version="1.32.0-alpha" />
       <PackageReference Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.32.0" />
       <PackageReference Include="Microsoft.SemanticKernel.Yaml" Version="1.32.0" />
