继续调整位置

--- a/BaseSKLearn/BaseSKLearn.csproj
+++ b/BaseSKLearn/BaseSKLearn.csproj
@@ -45,4 +45,10 @@
       <ProjectReference Include="..\SKUtils\SKUtils.csproj" />
     </ItemGroup>
 
+
+
+    <ItemGroup>
+      <Folder Include="SKOfficialDemos\GettingStarted\" />
+    </ItemGroup>
+
 </Project>
