--- a/BaseSKLearn/BaseSKLearn.csproj
+++ b/BaseSKLearn/BaseSKLearn.csproj
@@ -13,6 +13,14 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
+      <PackageReference Include="coverlet.collector" Version="6.0.2" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+      <PackageReference Include="xunit" Version="2.9.2" />
+      <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Using Include="Xunit" />
     </ItemGroup>
 
     <ItemGroup>
@@ -43,12 +51,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\SKUtils\SKUtils.csproj" />
-    </ItemGroup>
-
-
-
-    <ItemGroup>
-      <Folder Include="SKOfficialDemos\GettingStarted\" />
     </ItemGroup>
 
 </Project>
