--- a/SKUtils/SKUtils.csproj
+++ b/SKUtils/SKUtils.csproj
@@ -19,5 +19,13 @@
       <PackageReference Include="Microsoft.SemanticKernel.Plugins.Core" Version="1.32.0-alpha" />
       <PackageReference Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.32.0" />
       <PackageReference Include="Microsoft.SemanticKernel.Yaml" Version="1.32.0" />
+      <PackageReference Include="coverlet.collector" Version="6.0.2" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+      <PackageReference Include="xunit" Version="2.9.2" />
+      <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Using Include="Xunit" />
     </ItemGroup>
 </Project>
