--- a/SKUtils/SKUtils.csproj
+++ b/SKUtils/SKUtils.csproj
@@ -21,6 +21,7 @@
       <PackageReference Include="Microsoft.SemanticKernel.Connectors.Redis" Version="1.36.1-preview" />
       <PackageReference Include="Microsoft.SemanticKernel.Connectors.Qdrant" Version="1.36.1-preview" />
       <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureAISearch" Version="1.36.1-preview" />
+	  <PackageReference Include="Microsoft.SemanticKernel.Plugins.Web" Version="1.36.1-alpha" />
       <PackageReference Include="Microsoft.SemanticKernel.Planners.Handlebars" Version="1.36.1-preview" />
       <PackageReference Include="Microsoft.SemanticKernel.Plugins.Core" Version="1.36.1-alpha" />
       <PackageReference Include="Microsoft.SemanticKernel.Process.Core" Version="1.36.1-alpha" />
