--- a/SKUtils/SKUtils.csproj
+++ b/SKUtils/SKUtils.csproj
@@ -8,10 +8,12 @@
   </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="HtmlAgilityPack" Version="1.11.72" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.VectorData.Abstractions" Version="9.0.0-preview.1.25078.1" />
+      <PackageReference Include="Microsoft.Playwright" Version="1.50.0" />
       <PackageReference Include="Microsoft.SemanticKernel" Version="1.36.0" />
       <PackageReference Include="Microsoft.SemanticKernel.Agents.Core" Version="1.36.1-alpha" />
       <PackageReference Include="Microsoft.SemanticKernel.Agents.OpenAI" Version="1.36.1-alpha" />
