--- a/SKUtils/SKUtils.csproj
+++ b/SKUtils/SKUtils.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <NoWarn>SKEXP0001,SKEXP0010,SKEXP0110,OPENAI001</NoWarn>
+    <NoWarn>SKEXP0001,SKEXP0010,SKEXP0050,SKEXP0110,OPENAI001</NoWarn>
   </PropertyGroup>
 
     <ItemGroup>
